# agent-env

./: .dockerignore  .gitignore  404.html  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CLAUDE.md  Dockerfile.executor-agent  Dockerfile.executor-agent-rs  Dockerfile.gateway  Dockerfile.image-locality-scheduler  Dockerfile.iroh-relay  Dockerfile.operator  Dockerfile.sidecar  IMPLEMENTATION.md  Makefile  README.md  SUMMARY.md  arl-operator-0.1.0.tgz  arl-operator-0.1.1.tgz  arl-operator-0.1.2.tgz  arl-operator-0.1.3.tgz  devbox.json  go.mod  go.sum  index.html  index.yaml  mkdocs.yml  pyproject.toml  sitemap.xml  skaffold.yaml  test-live.yaml  test-minikube.sh  tools.go  validate.sh
.claude-plugin/: marketplace.json
.claude/skills/: arl-cli  arl-python-sdk  iroh-quic
.github/: copilot-instructions.md
.github/workflows/: docs.yml  publish-images.yml  publish-python-sdk.yml  release-cli.yaml  release-helm.yaml
api/v1alpha1/: groupversion_info.go  sandbox_types.go  sandbox_types_test.go  task_types.go  warmpool_types.go  zz_generated.deepcopy.go
architecture/: README.md  components.yaml  dependencies.yaml  private-containers.md  propagation-rules.yaml
charts/: agent-env-0.15.6.tgz  agent-env-0.16.0.tgz  agent-env-0.17.0.tgz  agent-env-0.18.0.tgz  agent-env-0.18.1.tgz  agent-env-0.18.2.tgz  agent-env-0.18.3.tgz  agent-env-0.18.4.tgz  agent-env-0.18.5.tgz  agent-env-0.18.6.tgz  agent-env-0.18.7.tgz  agent-env-0.19.0.tgz  agent-env-0.19.1.tgz  agent-env-0.19.2.tgz  agent-env-0.19.3.tgz  agent-env-0.19.4.tgz  agent-env-0.19.5.tgz  agent-env-0.19.6.tgz  agent-env-0.19.7.tgz  agent-env-0.19.8.tgz  arl-operator-0.1.4.tgz  arl-operator-0.1.5.tgz  arl-operator-0.10.0.tgz  arl-operator-0.11.0.tgz  arl-operator-0.12.0.tgz  arl-operator-0.12.1.tgz  arl-operator-0.13.0.tgz  arl-operator-0.14.0.tgz  arl-operator-0.14.1.tgz  arl-operator-0.2.1.tgz  arl-operator-0.2.2.tgz  arl-operator-0.2.3.tgz  arl-operator-0.2.4.tgz  arl-operator-0.2.5.tgz  arl-operator-0.2.6.tgz  arl-operator-0.2.7.tgz  arl-operator-0.3.0.tgz  arl-operator-0.3.1.tgz  arl-operator-0.4.1.tgz  arl-operator-0.5.0.tgz  (+5 more)
charts/agent-env/: Chart.yaml  values.yaml
charts/arl-operator/: Chart.yaml  values.yaml
charts/sing-box/: Chart.yaml  values.yaml
cmd/arl/: allocation_timeout.go  client.go  client_test.go  config_cmd.go  config_file.go  devbox.go  errors.go  exp.go  logs.go  main.go  metrics.go  output.go  pool.go  private_containers.go  root.go  schema.go  session.go  shell.go  shell_test.go  status.go  types.go  update.go
cmd/executor-agent/: main.go
cmd/gateway/: main.go
cmd/image-locality-scheduler/: main.go
cmd/operator/: main.go
cmd/sidecar/: main.go
config/crd/: arl.infra.io_sandboxes.yaml  arl.infra.io_tasks.yaml  arl.infra.io_warmpools.yaml  sandbox.yaml  task.yaml  warmpool.yaml
config/operator/: deployment-k8s.yaml  deployment.yaml
config/samples/: sandbox.yaml  task.yaml  warmpool-swebench.yaml  warmpool.yaml
deploy/mihomo/: mihomo.yaml
devbox/: Dockerfile  entrypoint.sh
developer-guide/architecture/: index.html
developer-guide/crd-reference/: index.html
developer-guide/deployment/: index.html
developer-guide/development/: index.html
developer-guide/installation/: index.html
developer-guide/session-state/: index.html
developer-guide/ssh-gateway/: index.html
docs/: REFACTOR_SUMMARY.md  index.md  user-manual.md
docs/developer-guide/: architecture.md  crd-reference.md  deployment.md  development.md  installation.md  session-state.md  ssh-gateway.md
docs/getting-started/: developers.md  overview.md  sdk-users.md
docs/plans/: 2026-02-14-merge-test-files-design.md
examples/python/: 01_basic_execution.py  02_multi_step_pipeline.py  03_environment_variables.py  04_working_directory.py  05_error_handling.py  06_long_running_task.py  07_sandbox_reuse.py  08_callback_hooks.py  08_streaming_execution.py  08_swebench_scenario.py  08_swebench_scenario_mock.py  09_executor_container.py  09_interactive_shell.py  09_multiple_feature.py  09_swebench_callbacks.py  10_direct_sidecar_client.py  10_interactive_shell.py  11_multiple_feature.py  11_pool_status.py  13_test_idle_timeout.py  README.md  SWEBENCH_README.md  basic_usage.py  batch_tasks.py  bench_gateway.py  error_handling.py  mock_agent.py  pyproject.toml  run_all_examples.py  shell.py  test_arl_sdk.py  test_gateway_api.py  test_interactive_shell.py  test_tools.py
examples/python/swebench_fixtures/: issue_description.txt
hack/: arch-lint.py  fix-arl-client-imports.py  fix-arl-client-pyproject.py  generate-sdk.sh  merge-openapi.py
openapi/: .gitignore  arl-api.yaml  sandbox-schema.json  task-schema.json  template.yaml  warmpool-schema.json
plugin/: README.md  install-codex-skills.sh  install.sh
proto/: agent.proto  executor.proto  executor_v2.proto
rust/arl-cli/: Cargo.toml  build.rs
rust/arl-cli/src/: arl.executor.v2.rs  config.rs  gateway.rs  main.rs  proto.rs  transport.rs
rust/executor-agent/: Cargo.toml  build.rs
rust/executor-agent/benches/: v2_bench.rs
rust/executor-agent/src/: agent.rs  agent_v2.rs  checkpoint.rs  lib.rs  main.rs  path_security.rs  protocol_v2.rs  pty_util.rs
rust/executor-agent/src/executor/: agent.rs  connection.rs  iroh_endpoint.rs  proto.rs
rust/executor-agent/src/v1/: agent.rs  mod.rs  protocol.rs
rust/executor-agent/src/v2/: agent.rs  connection.rs  iroh_endpoint.rs  mod.rs  protocol.rs  streams.rs
scripts/: batch_prefetch.py  benchmark_checkpoint.sh  locality_check.py  orbstack_sandbox_e2e.sh  sandbox_gateway_e2e.py
sdk/python/arl-wrapper/: README.md  pyproject.toml
sdk/python/arl-wrapper/arl/: __init__.py  session.py  types.py
search/: search_index.json
tests/: 01-basic-resources.yaml  02-complex-task.yaml  03-failure-cases.yaml  04-multi-sandbox.yaml  README.md
(+741 files in other folders)
