[tool.uv.workspace]
members = ["sdk/python/arl"]

[project]
name = "agent-env"
version = "0.1.0"
description = "ARL Infrastructure - Kubernetes operator and Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "ARL Infrastructure Team"}
]

dependencies = [
    "kubernetes>=34.1.0",
    "mkdocs-material>=9.7.1",
    "mkdocs-minify-plugin>=0.8.0",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "urllib3>=2.3.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["kubernetes.*"]
ignore_missing_imports = true
