[project]
name = "arl-examples"
version = "0.1.0"
description = "ARL Infrastructure Python SDK Examples"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "arl-client>=0.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
