[project]
name = "arl-examples"
version = "0.1.0"
description = "Examples for ARL Python SDK"
requires-python = ">=3.10"
dependencies = [
    "arl-env",
    "typer>=0.12",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.uv.sources]
arl-env = { path = "../../sdk/python/arl", editable = true }
