[package]
name = "arl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arl"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iroh = "1"
prost = "0.13"
bytes = "1"
anyhow = "1"
hex = "0.4"
dirs = "6"
toml = "0.8"
crossterm = "0.28"

[build-dependencies]
prost-build = "0.13"
