[package]
name = "executor-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
nix = { version = "0.29", features = ["term", "signal", "process", "fs", "user"] }
libc = "0.2"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
