[package]
name = "executor-agent"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
nix = { version = "0.29", features = ["term", "signal", "process", "fs", "user"] }
libc = "0.2"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
iroh = "1"
inotify = "0.11"
url = "2"
prost = "0.13"
bytes = "1"
walkdir = "2"
tar = "0.4"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "v2_bench"
harness = false
